[project]
name = "yt-dlp-rajiko"
version = "1.2"
description = "improved radiko.jp extractor for yt-dlp"
authors = [
	{ name="garret1317" },
]
requires-python = ">=3.8"
classifiers = [
	"License :: OSI Approved :: Zero-Clause BSD (0BSD)",
	"Environment :: Plugins",
]

[project.urls]
Homepage = "https://427738.xyz/yt-dlp-rajiko/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yt_dlp_plugins.extractor"]

[tool.setuptools.package-data]
"yt_dlp_plugins.extractor" = ["*.bin", "*.jpg"]
