[project]
name = "yt-dlp-rajiko"
version = "1.10"
description = "improved radiko.jp extractor for yt-dlp (fast and areafree)"

readme = "README.md"
license = "0BSD"
license-files = ["LICENCE"]

authors = [
	{ name="garret1317" },
]

requires-python = ">=3.8"
classifiers = [
	"Environment :: Plugins",
]

dependencies = [
	"protobug"
]

[project.urls]
Homepage = "https://427738.xyz/yt-dlp-rajiko/"
"日本語" = "https://427738.xyz/yt-dlp-rajiko/index.ja.html"
"Source Code" = "https://github.com/garret1317/yt-dlp-rajiko/"
"Release Notes" = "https://427738.xyz/yt-dlp-rajiko/CHANGELOG.xml"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yt_dlp_plugins.extractor"]

[tool.setuptools.package-data]
"yt_dlp_plugins.extractor" = ["*.bin", "*.jpg"]
